k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jugajug-app-service
  namespace: jugajug-prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 8080
      targetPort: 8080
      name: websocket
  selector:
    app: jugajug-app
